<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="step"
            type="com.spundev.bakingtime.model.Step" />

        <variable
            name="stepsTotal"
            type="int" />

        <variable
            name="stepPosition"
            type="int" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_media_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#000000">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:background="@android:color/black"
                tools:background="@tools:sample/backgrounds/scenic" />
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/step_section_padding">

                <TextView
                    android:id="@+id/step_detail_short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{step.shortDescription}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="@tools:sample/lorem" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/step_thumbnail_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/step_thumbnail_margin"
                    android:background="@drawable/border"
                    android:contentDescription="@string/recipe_item_image_description"
                    android:padding="@dimen/step_thumbnail_border_padding"
                    android:scaleType="fitCenter"
                    android:visibility='@{TextUtils.isEmpty(step.thumbnailURL) ? View.GONE : View.VISIBLE}'
                    app:imageUrl="@{step.thumbnailURL}"
                    tools:src="@drawable/recipe_img_placeholder" />

                <TextView
                    android:id="@+id/step_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/step_description_padding"
                    android:text="@{step.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


        <ProgressBar
            android:id="@+id/stepsProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:layout_marginTop="-8dp"
            android:indeterminate="false"
            android:max="@{stepsTotal}"
            android:progress="@{stepPosition + 1}" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goBackButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="@{stepPosition &gt; 0}"
                android:text="@string/previous_step_detail" />

            <!-- spacer view -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/goNextButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:enabled="@{stepPosition+1 &lt; stepsTotal}"
                android:text="@string/next_step_detail" />

        </LinearLayout>

    </LinearLayout>

</layout>

